# GFNClient

./: .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  setup-ffmpeg-windows.ps1  test-hdr.bat  tsconfig.json  vite.config.ts
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: auto-build.yml
flatpak/: com.zortos.opennow.binary.yml  com.zortos.opennow.desktop  com.zortos.opennow.yml
opennow-streamer/: Cargo.toml  IMPLEMENTATION_PLAN.md
opennow-streamer/macos/: Info.plist  bundle.sh
opennow-streamer/reverse/: audio.md  controller.md  cursor.md  datachannel.md  index.md  keyboard.md  protocol.md  rendering.md  session.md  statistics.md  video.md
opennow-streamer/src/: lib.rs  main.rs
opennow-streamer/src/api/: cloudmatch.rs  error_codes.rs  games.rs  mod.rs
opennow-streamer/src/app/: cache.rs  config.rs  mod.rs  session.rs  types.rs
opennow-streamer/src/auth/: mod.rs
opennow-streamer/src/gui/: image_cache.rs  mod.rs  renderer.rs  shaders.rs  stats_panel.rs
opennow-streamer/src/gui/screens/: dialogs.rs  login.rs  mod.rs  session.rs
opennow-streamer/src/input/: controller.rs  macos.rs  mod.rs  protocol.rs  windows.rs
opennow-streamer/src/media/: audio.rs  d3d11.rs  mod.rs  rtp.rs  video.rs  videotoolbox.rs
opennow-streamer/src/utils/: logging.rs  mod.rs  time.rs
opennow-streamer/src/webrtc/: datachannel.rs  mod.rs  peer.rs  sdp.rs  signaling.rs
src/: keyboard-lock.d.ts  logging.ts  main.ts  recording.ts  streaming.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.claude/: settings.local.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  auth.rs  config.rs  cursor.rs  discord.rs  games.rs  keyboard_hook.rs  lib.rs  logging.rs  main.rs  mouse_capture.rs  native_streaming.rs  proxy.rs  queue.rs  raw_input.rs  recording.rs  streaming.rs  test_hdr.rs  test_renderer.rs  utils.rs
src-tauri/src/native/: bridge.rs  ffmpeg_decoder.rs  gpu_renderer.rs  gui.rs  hdr_detection.rs  hdr_signaling.rs  input.rs  main.rs  mod.rs  signaling.rs  test_mode.rs  webrtc_client.rs
src-tauri/src/native/shaders/: yuv_to_rgb.wgsl  yuv_to_rgb_hdr.wgsl
src/styles/: main.css
