[package]
name = "opennow-streamer"
version = "0.1.0"
edition = "2021"
description = "High-performance native streaming client for GeForce NOW"
authors = ["OpenNow"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "sync", "time", "rt-multi-thread", "macros"] }

# WebRTC
webrtc = "0.11"
webrtc-util = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"] }

# WebSocket (signaling)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# TLS
native-tls = "0.2"
tokio-native-tls = "0.3"

# Video decoding - FFmpeg with hardware acceleration
ffmpeg-next = "8"
# Keep OpenH264 as fallback
openh264 = "0.6"

# Audio decoding (stub for now - will add opus decoding later)
# audiopus requires CMake to build, so we'll stub audio for now

# Audio playback (cross-platform)
cpal = "0.15"

# Gamepad/Controller support (cross-platform)
gilrs = "0.11"

# Window & Graphics
winit = "0.30"
wgpu = { version = "28", features = ["wgpu-core", "metal"] }
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

# GUI overlay
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image loading (for game art)
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# Utilities
libc = "0.2"
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
bytes = "1"
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
urlencoding = "2"
http = "1"
dirs = "5"
regex = "1"
lazy_static = "1.4"
hex = "0.4"
open = "5"
once_cell = "1.19"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    # D3D11/DXGI for zero-copy video
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
cocoa = "0.26"
objc = "0.2"
# Zero-copy video: VideoToolbox -> IOSurface -> Metal texture -> wgpu
metal = "0.33"
wgpu-hal = { version = "28", features = ["metal"] }
foreign-types = "0.5"
block = "0.1"

[target.'cfg(windows)'.dependencies.wgpu-hal]
version = "28"
features = ["dx12"]

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
x11 = { version = "2.21", features = ["xlib"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

# Force all dependencies to use wgpu 28 (needed for External Texture support)
# Using forked egui with wgpu 28 support
[patch.crates-io]
wgpu = { git = "https://github.com/gfx-rs/wgpu", tag = "v28.0.0" }
wgpu-core = { git = "https://github.com/gfx-rs/wgpu", tag = "v28.0.0" }
wgpu-types = { git = "https://github.com/gfx-rs/wgpu", tag = "v28.0.0" }
wgpu-hal = { git = "https://github.com/gfx-rs/wgpu", tag = "v28.0.0" }
naga = { git = "https://github.com/gfx-rs/wgpu", tag = "v28.0.0" }
egui-wgpu = { git = "https://github.com/zortos293/egui", branch = "wgpu-28" }
egui-winit = { git = "https://github.com/zortos293/egui", branch = "wgpu-28" }
egui = { git = "https://github.com/zortos293/egui", branch = "wgpu-28" }
