[package]
name = "opennow"
version = "0.0.12"
description = "OpenNOW - Open source GeForce NOW client"
authors = ["zortos293"]
edition = "2021"
default-run = "opennow"

[lib]
name = "opennow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# Tauri app binary (main)
[[bin]]
name = "opennow"
path = "src/main.rs"


[build-dependencies]
tauri-build = { version = "2.0", features = [], optional = true }

[dependencies]
tauri = { version = "2.0", features = ["devtools"], optional = true }
tauri-plugin-shell = { version = "2.0", optional = true }
tauri-plugin-http = { version = "2.0", optional = true }
tauri-plugin-store = { version = "2.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "socks"] }
url = "2.5"
base64 = "0.22"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
urlencoding = "2.1.3"
open = "5.3"
hex = "0.4"
discord-rich-presence = "0.2"
uuid = { version = "1.19.0", features = ["v4"] }
dirs = "5.0"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
futures-util = "0.3"
http = "1.0"
rand = "0.8"

# Native client dependencies (winit is pure Rust - no CMake needed)
winit = "0.30"
softbuffer = "0.4"
webrtc = "0.11"
bytes = "1.5"
anyhow = "1.0"

# Full native client dependencies
clap = { version = "4.4", features = ["derive"] }
openh264 = "0.6"
cpal = "0.15"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# GUI dependencies
eframe = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rfd = "0.15"

# macOS specific
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"

[features]
default = ["tauri-app"]
tauri-app = ["tauri", "tauri-plugin-shell", "tauri-plugin-http", "tauri-plugin-store", "custom-protocol", "tauri-build"]
custom-protocol = ["tauri/custom-protocol"]
native-client = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
